<resources>
    <string name="app_name">Advanced Lesson 9</string>
    <string name="sale">Sale</string>
    <string name="refund">Refund</string>
    <string name="revenue">Revenue</string>
    <string name="transaction_type">Type</string>
    <string name="date_time">Date time</string>
    <string name="holder_name">Holder name</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>

    <string name="error_name_short">Name too short</string>
    <string name="home">Home</string>
    <string name="add_transaction">Add transaction</string>
    <string name="delete_all">Delete all</string>

    <string name="transaction_removed">Transaction removed</string>
    <string name="undo">Undo</string>
</resources>
